--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,11 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+.vsconfig
+
+
+# FMOD files
+Assets/Plugins/FMOD/Cache/
+Assets/Plugins/FMOD/Resources/FMODStudioCache.asset
+Assets/StreamingAssets/*.bank
+fmod_editor.log
